# PlantOS

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  config.mk  justfile  qemu-run.sh
cmake/: PlantOSBuildOptions.cmake  PlantOSOptions.cmake  riscv-toolchain.cmake
docs/: board-waveshare-esp32-c6-dev-kit-n8.md  boot-flow.md  directory-layout.md  esp32-c6.md  interfaces.md  overview.md
esp32-test/: main.c  makefile  start.S
src/: CMakeLists.txt  kernel.asm  keyboard_map.h  kmain.c  qemu_virt.ld
src/arch/: CMakeLists.txt
src/arch/riscv32/: CMakeLists.txt
src/arch/riscv32/boot/: start.S  trap_entry.S
src/arch/riscv32/cpu/: context_switch.S  csr.h  idle.h  irq.c
src/arch/riscv32/include/arch/: context.h  cpu.h  csr.h  trap.h  types.h
src/arch/riscv32/timer/: cycle.h
src/arch/riscv32/trap/: trap.c  trapframe.h
src/kernel/: CMakeLists.txt  kernel.S  kernel.c  param.h
src/kernel/arch/riscv/: qemu_virt.ld
src/kernel/arch/riscv/boot/: entry.S  start.c
src/kernel/arch/riscv/include/arch/: io.h  param.h  riscv.h
src/kernel/arch/riscv32/: qemu_virt.ld
src/kernel/arch/riscv32/boards/qemu-virt/: qemu-virt.ld
src/kernel/arch/riscv32/boards/qemu-virt/boot/: entry.S  start.c
src/kernel/arch/riscv32/boot/: entry.S  start.c
src/kernel/arch/riscv32/cpu/: context.S  csr.h  interrupt.c  interrupt.h  timer.c  timer.h  trap.S  trap.c  trap.h
src/kernel/arch/riscv32/include/arch/: io.h  param.h  riscv.h
src/kernel/arch/riscv32/include/arch/platform/: interrupt.h  timer.h  uart.h
src/kernel/console/: console.c  console.h
src/kernel/core/: kmain.c  kprintf.c  panic.c
src/kernel/drivers/uart/: sifive.c  uart.c  uart.h
src/kernel/include/drivers/: uart.h
src/kernel/include/kernel/: console.h  gpio.h  irq.h  kernel.h  panic.h  platform.h  printk.h  timer.h  types.h
src/kernel/init/: kmain.c
src/kernel/lib/: kprintf.c  kstdarg.h  panic.c
src/platform/: CMakeLists.txt
src/platform/board/: CMakeLists.txt
src/platform/board/waveshare/: CMakeLists.txt
src/platform/board/waveshare/esp32-c6-dev-kit-n8/: CMakeLists.txt  board.c
src/platform/soc/: CMakeLists.txt
src/platform/soc/espressif/: CMakeLists.txt
src/platform/soc/espressif/esp32-c6/: CMakeLists.txt  linker.ld  platform.c
src/platform/soc/espressif/esp32-c6/boot/: start.c
src/platform/soc/espressif/esp32-c6/clock/: clock.c
src/platform/soc/espressif/esp32-c6/console/: README.md  uart.c  usb_serial_jtag.c
src/platform/soc/espressif/esp32-c6/gpio/: gpio.c  iomux.c
src/platform/soc/espressif/esp32-c6/include/soc/: gpio.h  iomux.h  irq.h  regs.h  timer.h  uart.h  usb_serial_jtag.h  wdt.h
src/platform/soc/espressif/esp32-c6/irq/: intc.c
src/platform/soc/espressif/esp32-c6/timer/: systimer.c
src/platform/soc/espressif/esp32-c6/uart/: uart.c
src/platform/soc/espressif/esp32-c6/usb_serial_jtag/: usb_serial_jtag.c
src/platform/soc/espressif/esp32-c6/watchdog/: wdt.c
src_ex/: Makefile
src_ex/bootloader/: boot.asm
src_ex/kernel/: main.asm
